[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
foundry-binder = { path = "../../foundry/binder" }

[dependencies]
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["abigen"] }
foundry-common = { path = "../../foundry/common" }
config = "0.13.1"
serde = "1.0.8"
serde_derive = "1.0.8"
